# fastAPI_project

./: main.py  pyproject.toml  test.http
configurations/: database.py  settings.py
models/: books.py
routers/: __init__.py
routers/v1/: books.py
schemas/: __init__.py  books.py
